cmake_minimum_required(VERSION 3.21)
project(AlgorithmHomework)

set(CMAKE_CXX_STANDARD 14)

add_executable(UsingVector "Matrix Chain Mul/UsingVector.cpp")
add_executable(UsingPointer "Matrix Chain Mul/UsingPointer.cpp")
add_executable(source "Fractional Knapsack Problem/source.cpp")
add_executable(Backtracking "01KnapSack Problem/Backtracking.cpp")
add_executable(BranchAndBound "01KnapSack Problem/BranchAndBound.cpp")